[gd_scene load_steps=8 format=3 uid="uid://dk8bevu5ymmta"]

[ext_resource type="Script" path="res://scenes/docks/query_dock/query_menu/query_menu.gd" id="1_dggri"]
[ext_resource type="Texture2D" uid="uid://bh4eaxj8xraat" path="res://icons/play.svg" id="2_0dn1d"]
[ext_resource type="Texture2D" uid="uid://ccbm3oqwip2oo" path="res://icons/stop.svg" id="3_ojmsr"]
[ext_resource type="Texture2D" uid="uid://bynfauci3i8l5" path="res://icons/disk.svg" id="4_lopgd"]
[ext_resource type="Texture2D" uid="uid://cyrlja5vrhh1x" path="res://icons/signals.svg" id="5_72ku1"]
[ext_resource type="Texture2D" uid="uid://bn673ix46oypq" path="res://icons/cylinder.svg" id="6_iwb41"]
[ext_resource type="Texture2D" uid="uid://cfvtv2sw3ymjh" path="res://icons/magnifying_glass.svg" id="7_pjxpe"]

[node name="QueryMenu" type="HFlowContainer" node_paths=PackedStringArray("connection_option", "database_option", "page_size_option")]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
script = ExtResource("1_dggri")
connection_option = NodePath("Connection")
database_option = NodePath("Database")
page_size_option = NodePath("PageSize")

[node name="Play" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("2_0dn1d")
flat = true

[node name="Stop" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("3_ojmsr")
flat = true

[node name="Save" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("4_lopgd")
flat = true

[node name="ConnectionTexture" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 10
texture = ExtResource("5_72ku1")
stretch_mode = 3

[node name="Connection" type="OptionButton" parent="."]
layout_mode = 2
size_flags_horizontal = 8
item_count = 1
selected = 0
popup/item_0/text = "mongodb://127.0.0.1:27017"
popup/item_0/id = 0

[node name="DatabaseTexture" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("6_iwb41")
stretch_mode = 3

[node name="Database" type="OptionButton" parent="."]
layout_mode = 2
size_flags_horizontal = 0
item_count = 1
selected = 0
popup/item_0/text = "admin"
popup/item_0/id = 0

[node name="PageSize" type="OptionButton" parent="."]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Results per page"
item_count = 5
selected = 0
popup/item_0/text = "10"
popup/item_0/id = 10
popup/item_1/text = "50"
popup/item_1/id = 50
popup/item_2/text = "100"
popup/item_2/id = 100
popup/item_3/text = "500"
popup/item_3/id = 500
popup/item_4/text = "1000"
popup/item_4/id = 1000

[node name="Search" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 8
toggle_mode = true
icon = ExtResource("7_pjxpe")
flat = true

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="item_selected" from="Connection" to="." method="_on_connection_item_selected"]
[connection signal="item_selected" from="Database" to="." method="_on_database_item_selected"]
[connection signal="item_selected" from="PageSize" to="." method="_on_page_size_item_selected"]
[connection signal="toggled" from="Search" to="." method="_on_search_toggled"]
